@@ -140,10 +140,11 @@ namespace libtorrent
 		return m_requester.lock();
 	}
 
-	void tracker_connection::fail(int code, char const* msg)
+	void tracker_connection::fail(int code, char const* msg, int interval, int min_interval)
 	{
 		boost::shared_ptr<request_callback> cb = requester();
-		if (cb) cb->tracker_request_error(m_req, code, msg);
+		if (cb) cb->tracker_request_error(m_req, code, msg
+			, interval == 0 ? min_interval : interval);
 		close();
 	}
 
@@ -246,7 +247,7 @@ namespace libtorrent
 			// we need to post the error to avoid deadlock
 			if (boost::shared_ptr<request_callback> r = c.lock())
 				ios.post(boost::bind(&request_callback::tracker_request_error, r, req, -1
-					, "unknown protocol in tracker url: " + req.url));
+					, "unknown protocol in tracker url: " + req.url, 0));
 			return;
 		}
 
